# improc

./: .dir-locals.el  .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: codecoverage.yaml  rust.yml
benches/: affine_transform.rs  image_access.rs
examples/: sample_json.rs  sandbox_macro.rs
examples/feat/: fast_detect.rs  fast_matching.rs  main.rs
examples/viewer/: sample_viewer.rs
feat/: Cargo.toml
feat/src/: lib.rs
feat/src/descriptors/: brief.rs  mod.rs
feat/src/keypoints/: fast.rs  imgproc.rs  linalg.rs  mod.rs
feat/src/matcher/: brute_force.rs  mod.rs
notebooks/: test_image.ipynb
src/: ellipse.rs  epipolar.rs  feat.rs  imgproc.rs  json_writer.rs  lib.rs  linalg.rs  main.rs  optimizer.rs  sfm.rs  utility.rs
src/ellipse/: fns.rs  iterative_reweight.rs  least_square.rs  matrix_ops.rs  renormalization.rs  taubin.rs  test_utility.rs
src/epipolar/: fundamental_matrix.rs  homography.rs  latent_variable_method.rs  rank_correction.rs  triangulation.rs  trifocal.rs
src/feat/: mod.rs
src/feat/descriptors/: brief.rs  mod.rs  steered_brief.rs
src/feat/keypoints/: fast.rs  mod.rs
src/feat/matcher/: brute_force.rs  mod.rs
src/linalg/: matrix.rs  mod.rs  ransac.rs
src/optimizer/: fns.rs  geometric.rs  least_square.rs  taubin.rs
src/sfm/: affine_self_calibration.rs  plane_self_calibration.rs  projective_self_calibration.rs  self_calibration.rs
src/slam/: mod.rs
src/slam/map/: covisibility_graph.rs  essential_graph.rs  keyframe.rs  map_point.rs  mod.rs
src/slam/tracking/: mod.rs
viewer/: Cargo.toml  README.md  index.html  package-lock.json  package.json
viewer/src/: App.tsx  app.rs  image_manager.rs  lib.rs  presenter.rs  shader.rs  utility.rs  vertex.rs  viewer.rs
viewer/src-tauri/: Cargo.toml  tauri.conf.json
viewer/src-tauri/src/: main.rs
viewer/src/model/: arrow.rs  image.rs  image_manager.rs  mod.rs  point.rs  point_relation.rs  viewer_model.rs
viewer/src/model/drawables/: arrows.rs  image.rs  lines.rs  mod.rs  points.rs  screen.rs
viewer/src/model/old/: image.rs  image_manager.rs  mod.rs  point_relation.rs
viewer/src/presenter/: default.rs  dual.rs  mod.rs  presenter.rs
viewer/src/shader/: arrow_line_shader.rs  arrow_shader.rs  default.vs  image_shader.rs  line_shader.rs  mod.rs  point_shader.rs  points.fs  points.vs  relation_line_shader.rs  screen.fs  screen.vs  screen_shader.rs
viewer/src/shader/glsl/: arrow.vs  line.fs  line.gs  line.vs  points.fs
viewer/src/view/: mod.rs  viewer.rs
viewer/src_/: lib.rs
viewer/src_/model/: arrow.rs  image_manager.rs
viewer/src_/presenter/: dual.rs  mod.rs
viewer/src_/shader/: point_shader.rs  relation_line_shader.rs
viewer/src_/shader/glsl/: default.fs  default.vs  line.vs  points.vs  relation_line.fs  relation_line.gs  screen.fs  screen.vs
viewer/tests/: integration_test.rs
