[package]
name = "improc"
version = "0.1.0"
authors = ["Kitamura <ymyk6602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "viewer",
]

[dependencies]
viewer = { path = "./viewer" }
env_logger = "0.9.0"
image = "0.23.14"
nalgebra = "0.29.0"
num-traits = "0.2.14"
bitvec = "0.22.3"
rand = "0.8.4"
rand_distr = "0.4.2"
cgmath = "0.18.0"
clap = "3.0.0-rc.7"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "image_access"
harness = false

[[bench]]
name = "affine_transform"
harness = false

[[example]]
name = "fast_detect"
path = "examples/feat/fast_detect.rs"

[[example]]
name = "fast_matching"
path = "examples/feat/fast_matching.rs"
