[package]
name = "improc"
version = "0.1.0"
authors = ["Kitamura <ymyk6602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "viewer",
]

[dependencies]
# viewer = { path = "./viewer" }
env_logger = "0.9.0"
image = "0.23.14"
nalgebra = "0.30.1"
num-traits = "0.2.14"
bitvec = "0.22.3"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_distr = "0.4.3"
cgmath = "0.18.0"
clap = "4.0.2"
anyhow = "1.0.56"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
# criterion = "0.3"
rand_chacha = "0.3.1"

[profile.release]
debug = true

[[bench]]
name = "image_access"
harness = false

[[bench]]
name = "affine_transform"
harness = false

[[example]]
name = "least_square"
path = "examples/ellipse/least_square_sample.rs"

[[example]]
name = "sandbox_macro"
path = "examples/sandbox_macro.rs"

[[example]]
name = "fast_detect"
path = "examples/feat/fast_detect.rs"

[[example]]
name = "fast_matching"
path = "examples/feat/fast_matching.rs"

[[example]]
name = "sample_json"
path = "examples/sample_json.rs"


# [[example]]
# name = "sample_viewer"
# path = "examples/viewer/sample_viewer.rs"
